szamra szures kijavitasa

--- a/admin.html
+++ b/admin.html
@@ -31,7 +31,7 @@
                     <label for="faj"></label>
                     <input type="text" id="faj" name="faj" placeholder="Faj szerint szűres">
                     <label for="kor"></label>
-                    <input type="number" id="kor" name="kor" placeholder="Kor szerint szűres">
+                    <input type="text" id="kor" name="kor" placeholder="Kor szerint szűres">
                 </div>
                 <div>
                     <label for="ujNev"></label>
@@ -39,7 +39,7 @@
                     <label for="ujFaj"></label>
                     <input type="text" id="ujFaj" name="ujFaj" placeholder="Faj">
                     <label for="ujKor"></label>
-                    <input type="number" id="ujKor" name="ujKor" placeholder="Kor">
+                    <input type="text" id="ujKor" name="ujKor" placeholder="Kor">
                     <button type="button" id="felvitel">Új elem</button>
                 </div>
             </form>
