--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <label for="faj"></label>
                 <input type="text" id="faj" name="faj" placeholder="Faj szerint szűres">
                 <label for="kor"></label>
-                <input type="number" id="kor" name="kor" placeholder="Kor szerint szűres">
+                <input type="text" id="kor" name="kor" placeholder="Kor szerint szűres">
             </form>
         </article>
         <aside>
