--- a/index.html
+++ b/index.html
@@ -23,19 +23,7 @@
                 <li><a href="admin.html">Admin felület</a></li>
             </ul>
         </nav>
-        <article>
-            <form>
-                <label for="nev"></label>
-                <input type="text" id="nev" name="nev" placeholder="Név szerint szűres">
-                <label for="faj"></label>
-                <input type="text" id="faj" name="faj" placeholder="Faj szerint szűres">
-                <label for="kor"></label>
-                <input type="text" id="kor" name="kor" placeholder="Kor szerint szűres">
-            </form>
-        </article>
-        <aside>
-            <table class="table table-bordered table-striped"></table>
-        </aside>
+        <aside class="card"></aside>
         <footer><p>@Nguyen Duc Duy</p></footer>
     </main>
 </body>
